--- a/lab.html
+++ b/lab.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Raido</title>
-  <link rel="icon" href="images/favicon.webp" rel="icon">
-  <meta name="description" content="Página Web de Raido">
+  <title>Lab | Raido</title>
+  <link rel="icon" href="images/favicon.webp" type="image/x-icon">
+  <meta name="description" content="Lab de Raido">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,8 +18,8 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="images/logo.svg" alt="Raido Logo" width="80" height="30" class="d-inline-block align-text-top">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.svg" alt="Raido" width="80" height="30" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,18 +34,17 @@
             <a class="nav-link" href="lab.html">Lab</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-custom no-padding-right" href="#contacto">Contáctanos</a>
+            <a class="btn btn-custom" href="contact.html">Contáctanos</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-  <!-- Hero Section -->
-  <div class="container">
-    <p>Aquí va el contenido de cada sección</p>
+  <!-- Main content for lab page -->
+  <div class="container my-5">
+    <h1>Lab de Raido</h1>
+    <p>Proyectos y trabajos...</p>
   </div>
-
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
     <div class="container">
@@ -77,11 +76,10 @@
       </div>
     </div>
   </footer>
-
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
