--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raido</title>
   <link rel="icon" href="images/favicon.webp" rel="icon">
-  <meta name="description" content="Página Web de Raido">
+  <meta name="description" content="Raido: Líderes en DevOps, Seguridad y Desarrollo Web. Transformamos ideas en soluciones tecnológicas innovadoras para impulsar tu negocio. Explora nuestros proyectos y descubre cómo podemos ayudarte.">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Fonts Poppins (solo regular, semibold y bold) -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts Playfair Display (solo regular) -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -42,9 +50,38 @@
   </nav>
 
   <!-- Hero Section -->
-  <div class="container">
-    <p>Aquí va el contenido de cada sección</p>
-  </div>
+  <section class=" text-white py-5">
+    <div class="container text-center">
+      <h1 class="mb-4">Code Your Future</h1>
+      <p class="lead mb-4">Te apoyamos en cada paso de tu viaje hacia un futuro tecnológico más seguro y eficiente.</p>
+      <img src="images/landing.webp" alt="Landing Image" class="img-fluid mb-4">
+      <p class="text-white">Better - Faster - Stronger</p>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section class="bg-white py-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <div class="mb-4">
+            <p>Nuestra misión <br> es aprovechar el poder de la tecnología para desarrollar proyectos innovadores,
+              podemos
+              transformar ideas en realidades tangibles que tengan un impacto positivo.</p>
+            <p class="mb-0">
+              <a href="about.html" class="text-decoration-none">
+                <strong>Más sobre Raido</strong> <img src="images/arrowblack.svg" alt="Flecha derecha" class="ms-2"
+                  style="vertical-align: middle;">
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 text-center">
+          <img src="images/problema.webp" alt="Imagen centrada" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
