--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
       </div>
     </div>
   </footer>
+  <p class="text-white">Better - Faster - Stronger</p>
+  
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
