--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="images/logo.svg" alt="Raido Logo" width="80" height="30" class="d-inline-block align-text-top">
@@ -52,7 +52,7 @@
   <!-- Hero Section -->
   <section class="text-white py-5">
     <div class="container text-center">
-      <h1 class="mb-4"><span id="changing-word">Code</span> Your Future</h1>
+      <h1 class="mb-4"><span id="changing-word"></span> Your Future</h1>
       <p class="lead mb-4">Te apoyamos en cada paso de tu viaje hacia un futuro tecnológico más seguro y eficiente.</p>
       <img src="images/landing.webp" alt="Landing Image" class="img-fluid mb-4 hero-image">
       <p class="text-white">Better - Faster - Stronger</p>
@@ -106,16 +106,13 @@
               <a class="nav-link" href="lab.html">Lab</a>
             </li>
           </ul>
-          <a href="#hero" class="text-white">
+          <a href="#navbar" class="text-white">
             <img src="images/arrow.svg" alt="Subir" class="mb-2">
           </a>
         </div>
       </div>
     </div>
   </footer>
-  <p class="text-white">Better - Faster - Stronger</p>
-  
-
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
