feat(ui): add lab section
Description and  Proyect section added

--- a/about.html
+++ b/about.html
@@ -26,10 +26,11 @@
 
 <body>
   <!-- Navbar -->
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <!-- Navbar -->
+   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.svg" alt="Raido" width="80" height="30" class="d-inline-block align-text-top">
+        <img src="images/logo.svg" alt="Raido Logo" width="80" height="30" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,19 +45,20 @@
             <a class="nav-link" href="lab.html">Lab</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-custom" href="contact.html">Contáctanos</a>
+            <a class="btn btn-custom no-padding-right" href="#contacto">Contáctanos</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
+
   <!-- Acerca de -->
   <section class="about-section bg-white py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <h2 class="about-title">Acerca de Raido</h2>
+          <h1>Acerca de Raido</h1>
           <p class="about-text">Queremos que nuestros servicios de consultoría en <strong>Desarrollo Web</strong>,
             <strong>DevOps</strong> y <strong>Ciberseguridad</strong> sigan manteniendo los más altos estándares a nivel
             global en servicio y tecnología. Nuestra misión es aprovechar el poder de la tecnología para desarrollar
