--- a/lab.html
+++ b/lab.html
@@ -7,6 +7,13 @@
   <title>Lab | Raido</title>
   <link rel="icon" href="images/favicon.webp" type="image/x-icon">
   <meta name="description" content="Lab de Raido">
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Fonts Poppins (solo regular, semibold y bold) -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts Playfair Display (solo regular) -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,11 +22,11 @@
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <!-- Navbar -->
+   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.svg" alt="Raido" width="80" height="30" class="d-inline-block align-text-top">
+        <img src="images/logo.svg" alt="Raido Logo" width="80" height="30" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,17 +41,42 @@
             <a class="nav-link" href="lab.html">Lab</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-custom" href="contact.html">Contáctanos</a>
+            <a class="btn btn-custom no-padding-right" href="#contacto">Contáctanos</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
   <!-- Main content for lab page -->
   <div class="container my-5">
     <h1>Lab de Raido</h1>
-    <p>Proyectos y trabajos...</p>
+    <p>En el Lab, la división innovadora de Raido, nos dedicamos a la experimentación y desarrollo de proyectos
+      tecnológicos vanguardistas. Nuestro objetivo principal es la creación de soluciones que integren la tecnología en
+      la vida cotidiana de maneras únicas y significativas. Si tienes una idea con una base tecnológica y deseas
+      desarrollarla, te invitamos a ponerte en contacto con nosotros. En el Lab, creemos en el poder de la creatividad y
+      la innovación para transformar el futuro, y estamos aquí para ayudarte a convertir tus ideas visionarias en
+      realidades tangibles.</p>
+    <img src="images/about.webp" class="img-fluid lab-image" alt="Neon lines">
   </div>
+  <!--Projects-->
+  <section class="about-section bg-white py-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h2>CODEWEAR</h2>
+          <p class="about-text">Actualmente estamos trabajando en un proyecto innovador llamado CODEWEAR. Este
+            emocionante desarrollo busca fusionar moda y tecnología de una manera única, permitiendo una interacción
+            digital novedosa a través de prendas de vestir. Mantente atento a nuestras actualizaciones para descubrir
+            cómo CODEWEAR revolucionará la forma en que nos conectamos con el mundo a través de la moda.
+          </p>
+        </div>
+        <div class="col-md-6 text-center py-sm-5 py-0">
+          <img src="images/code-wear-banner.webp" alt="Code Wear Brand" class="img-fluid about-image rounded-image">
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
     <div class="container">
@@ -69,7 +101,7 @@
               <a class="nav-link" href="lab.html">Lab</a>
             </li>
           </ul>
-          <a href="#hero" class="text-white">
+          <a href="#navbar" class="text-white">
             <img src="images/arrow.svg" alt="Subir" class="mb-2">
           </a>
         </div>
