--- a/about.html
+++ b/about.html
@@ -26,8 +26,7 @@
 
 <body>
   <!-- Navbar -->
-   <!-- Navbar -->
-   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="images/logo.svg" alt="Raido Logo" width="80" height="30" class="d-inline-block align-text-top">
@@ -45,14 +44,12 @@
             <a class="nav-link" href="lab.html">Lab</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-custom no-padding-right" href="#contacto">Contáctanos</a>
+            <a class="btn btn-custom no-padding-right" href="contact.html">Contáctanos</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-
   <!-- Acerca de -->
   <section class="about-section bg-white py-5">
     <div class="container">
@@ -130,6 +127,19 @@
             nuestros clientes como de nuestro equipo. Acompañamos a nuestros clientes en su camino hacia un futuro
             tecnológico seguro y eficiente, operando con transparencia, calidad y mejora continua basados en nuestros
             valores fundamentales.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Call to Action Section -->
+  <section class="cta-section bg-white py-6">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-8">
+          <h3>¡Tu viaje comienza aquí!</h3>
+        </div>
+        <div class="col-md-4 text-md-right">
+          <a href="contact.html" class="btn btn-action">Contáctanos</a>
         </div>
       </div>
     </div>
