--- a/lab.html
+++ b/lab.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-   <!-- Navbar -->
-   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!-- Navbar -->
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="images/logo.svg" alt="Raido Logo" width="80" height="30" class="d-inline-block align-text-top">
@@ -41,7 +41,7 @@
             <a class="nav-link" href="lab.html">Lab</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-custom no-padding-right" href="#contacto">Contáctanos</a>
+            <a class="btn btn-custom no-padding-right" href="contact.html">Contáctanos</a>
           </li>
         </ul>
       </div>
@@ -77,6 +77,7 @@
       </div>
     </div>
   </section>
+
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
     <div class="container">
