--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
               <textarea type="text" class="form-control" id="inputMessage" rows="3" placeholder="Tu idea..."></textarea>
             </div>
             <div class="g-recaptcha" data-sitekey="6LcHIxYqAAAAADzVWG9nRsf_HJ0HfZNnGn2gYlL4"></div>
-            <button type="submit" class="btn btn-black">Enviar</button>
+            <button type="submit" class="btn btn-custom">Enviar</button>
           </form>
         </div>
         <div class="col-md-6 text-center py-sm-5 py-0">
