feat(ui): triangle section added
Index.html modified, new section added, js modified, css modified

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h1 class="mb-4"><span id="changing-word"></span> Your Future</h1>
       <p class="lead mb-4">Te apoyamos en cada paso de tu viaje hacia un futuro tecnológico más seguro y eficiente.</p>
       <img src="images/landing.webp" alt="Landing Image" class="img-fluid mb-4 hero-image">
-      <p class="text-white">Better - Faster - Stronger</p>
+      <p class="text-white">Ciberseguridad - DevOps - Desarrollo Web</p>
     </div>
   </section>
 
@@ -81,6 +81,29 @@
       </div>
     </div>
   </section>
+ 
+<!--Triangle Section-->
+<section class="py-5">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <div class="triangle-container">
+          <p class="paragraph" id="paragraph">Pasa el ratón sobre una sección del triángulo para ver más información.</p>
+          <div class="triangle" id="triangle">
+            <div class="triangle-text">
+              <span class="side side-devops" onmouseover="changeText('DevOps')">DevOps</span>
+              <span class="side side-security" onmouseover="changeText('Security')">Ciberseguridad</span>
+              <span class="side side-code" onmouseover="changeText('Code')">Desarrollo Web</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
