--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<link rel="stylesheet" href="styles.css?v=1.1">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Raido</title>
-  <link rel="icon" href="images/favicon.webp" rel="icon">
-  <meta name="description"
-    content="Raido: Líderes en DevOps, Seguridad y Desarrollo Web. Transformamos ideas en soluciones tecnológicas innovadoras para impulsar tu negocio. Explora nuestros proyectos y descubre cómo podemos ayudarte.">
+  <title>Contact | Raido</title>
+  <link rel="icon" href="images/favicon.webp" type="image/x-icon">
+  <meta name="description" content="Lab de Raido">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -20,6 +19,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css">
+  <!-- Mailing JS -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
+  <script src="js/mailing.js"></script>
+  <!-- Captcha JS -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -49,62 +54,42 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <section class="text-white py-5">
-    <div class="container text-center">
-      <h1 class="mb-4"><span id="changing-word"></span> Your Future</h1>
-      <p class="lead mb-4">Te apoyamos en cada paso de tu viaje hacia un futuro tecnológico más seguro y eficiente.</p>
-      <img src="images/landing.webp" alt="Landing Image" class="img-fluid mb-4 hero-image">
-      <p class="text-white">Ciberseguridad - DevOps - Desarrollo Web</p>
-    </div>
-  </section>
-
-  <!-- Services Section -->
   <section class="bg-white py-5">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center"> <!-- Cambio aquí para centrar verticalmente -->
         <div class="col-md-6">
-          <div class="mb-4">
-            <p class="mb-0">Nuestra misión es aprovechar el poder de la tecnología para desarrollar proyectos
-              innovadores, podemos transformar ideas en realidades tangibles que tengan un impacto positivo.</p>
-            <p class="mb-0">
-              <a href="about.html" class="text-decoration-none hover-underline-animation">
-                <strong>Más sobre Raido</strong>
-                <img src="images/arrowblack.svg" alt="Flecha derecha" class="ms-2" style="vertical-align: -5px;">
-              </a>
-            </p>
-          </div>
+          <h1>¡Tu viaje comienza aquí!</h1>
+          <form id="contactForm">
+            <!--Form Content-->
+            <div class="form-row">
+              <div class="form-group col">
+                <label for="inputName">Dejanos tu nombre</label>
+                <input class="form-control" id="inputName" placeholder="Nombre" required>
+              </div>
+              <div class="form-group col">
+                <label for="inputSurname">También tu apellido</label>
+                <input class="form-control" id="inputSurname" placeholder="Apellido" required>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="inputEmail">Ahora tu correo</label>
+              <input type="email" class="form-control" id="inputEmail" placeholder="correo@ejemplo.com" required>
+            </div>
+            <div class="form-group">
+              <label for="inputMessage">Mensaje</label>
+              <textarea type="text" class="form-control" id="inputMessage" rows="3" placeholder="Tu idea..."></textarea>
+            </div>
+            <div class="g-recaptcha" data-sitekey="6LcHIxYqAAAAADzVWG9nRsf_HJ0HfZNnGn2gYlL4"></div>
+            <button type="submit" class="btn btn-black">Enviar</button>
+          </form>
         </div>
         <div class="col-md-6 text-center py-sm-5 py-0">
-          <img src="images/problema.webp" alt="Imagen centrada" class="img-fluid">
+          <img src="images/logo_contact.png" alt="Imagen centrada" class="img-fluid smaller-image">
         </div>
       </div>
     </div>
   </section>
- 
-<!--Triangle Section-->
-<section class="py-5">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
-        <div class="triangle-container">
-          <p class="paragraph" id="paragraph">Pasa el ratón sobre una sección del triángulo para ver más información.</p>
-          <div class="triangle" id="triangle">
-            <div class="triangle-text">
-              <span class="side side-devops" onmouseover="changeText('DevOps')">DevOps</span>
-              <span class="side side-security" onmouseover="changeText('Security')">Ciberseguridad</span>
-              <span class="side side-code" onmouseover="changeText('Code')">Desarrollo Web</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
     <div class="container">
@@ -140,8 +125,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <!-- Custom Script -->
-  <script src="js/scripts.js"></script>
-</body>
 
 </html>
